# WordCalculation

./: README.md  main.py  pyproject.toml
wordcalculation/: logics.py  parameters.py
